--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,10 +6,13 @@
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <!--   <%= csrf_meta_tags %>   -->
   </head>
 
   <body>
+    <%= render 'layouts/navigation' %>
   	<%= render 'layouts/messages' %>
+
    	<%= yield %>
   </body>
 </html>
