--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,10 @@
   <body>
     <%= render 'layouts/navigation' %>
   	<%= render 'layouts/messages' %>
-
+    <div class="container">
    	<%= yield %>
+
+  </div>
+  <%= render 'layouts/footer' %>
   </body>
 </html>
